# posse-bliki

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  quartz.config.ts  quartz.layout.ts
.github/workflows/: ci.yml  deploy.yml
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
content/: about.md  colophon.md  index.md
content/.obsidian/: app.json  core-plugins.json
content/notes/: architecture.md  bias.md  biology.md  bliki.md  blockchain.md  classes.md  communication.md  concurrency.md  data.md  dependencies.md  descendants.md  design.md  diversity.md  economic-ethics.md  enums.md  experience.md  exploration.md  freedom.md  goals.md  habits.md  hack.md  hotkeys.md  how-this-bliki-works.md  information.md  interfaces.md  interviews.md  learning.md  leverage.md  life.md  me-random.md  me.md  pairing.md  personality.md  privacy.md  process.md  productivity.md  programming-language.md  rebase.md  regimen.md  risk.md  (+7 more)
docs/adr/: 0001-spec-and-harness-over-implementation.md  0002-no-quartz-no-vendored-ssg.md  0003-uv-for-python-toolchain.md  README.md  (+2 more)
scripts/: bootstrap.sh
spec/: README.md  build-invariants.md  content-schema.json  content-schema.md  feeds.md  indieweb.md  output-contract.md  url-policy.md
tests/: conftest.py  test_aliases.py  test_drafts.py  test_frontmatter_schema.py  test_html_valid.py  test_idempotent.py  test_indieweb_links.py  test_jsonfeed.py  test_links.py  test_microformats.py  test_rss.py  test_url_policy.py
(+2 files in other folders)
